--- a/personal-website/src/pages/Home.module.css
+++ b/personal-website/src/pages/Home.module.css
@@ -115,3 +115,10 @@
         padding-bottom: 2em;
     }
 }
+
+@media (max-width:530px){
+    .headShot{
+        width:300px;
+        height:300px;
+    }
+}
